# explorer

./: .editorconfig  .gitignore  .tool-versions  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  RELEASE.md  flake.nix  foo.exs  mix.exs  rust-toolchain.toml  shell.nix  test.parquet
.github/workflows/: ci.yml  gh-pages.yml  release.yml  rust-ci.yml
config/: config.exs
datasets/: wine.csv
lib/: explorer.ex  filesystem.ex  fss.ex
lib/explorer/: application.ex  backend.ex  comptime_utils.ex  data_frame.ex  datasets.ex  duration.ex  example.exs  fss.ex  inspect.ex  polars_backend.ex  query.ex  remote.ex  series.ex  shared.ex  sql_context.ex  tensor_frame.ex
lib/explorer/backend/: data_frame.ex  lazy_frame.ex  lazy_series.ex  query_frame.ex  series.ex  sql_context.ex
lib/explorer/fss/: http.ex  s3.ex  utils.ex
lib/explorer/fss/utils/: http.ex
lib/explorer/polars_backend/: data_frame.ex  experimental_io.ex  expression.ex  expressions.ex  lazy_data_frame.ex  lazy_frame.ex  lazy_stack.ex  native.ex  series.ex  shared.ex  sql_context.ex
lib/explorer/polars_backend/series/: iterator.ex
lib/explorer/query/: sql.ex
lib/explorer/remote/: holder.ex  local_gc.ex
native/explorer/: Cargo.toml  Cross.toml  README.md  build.rs  rust-toolchain.toml
native/explorer/.cargo/: config  config.toml
native/explorer/src/: cloud_writer.rs  dataframe.rs  datatypes.rs  encoding.rs  error.rs  expressions.rs  io.rs  lazyframe.rs  lib.rs  local_message.c  local_message.rs  series.rs  sql_context.rs  writer.rs
native/explorer/src/dataframe/: experimental_io.rs  io.rs
native/explorer/src/datatypes/: ex_dtypes.rs
native/explorer/src/lazyframe/: io.rs
native/explorer/src/series/: from_list.rs  log.rs
notebooks/: exploring_explorer.livemd
priv/datasets/: fossil_fuels.csv  wine_data.csv
test/: explorer_test.exs  test_helper.exs
test/explorer/: comptime_utils_test.exs  data_frame_test.exs  fss_test.exs  new_approach_test.exs  query_test.exs  remote_test.exs  series_test.exs  shared_test.exs  sql_context_test.exs  tensor_frame_test.exs
test/explorer/backend/: lazy_frame_test.exs  lazy_series_test.exs  query_frame_test.exs
test/explorer/data_frame/: csv_test.exs  grouped_test.exs  ipc_stream_test.exs  ipc_test.exs  lazy_test.exs  ndjson_test.exs  parquet_test.ex  parquet_test.exs
test/explorer/polars_backend/: decimal_unstable_test.exs  expression_test.exs  expressions_test.exs  lazy_stack_test.exs  series_test.exs
test/explorer/series/: datetime_test.exs  duration_test.exs  inferred_dtype_property_test.exs  list_test.exs  struct_test.exs
test/fss/: http_test.exs
test/fss/s3/: entry_test.exs
test/support/: datetime_with_ns_res.parquet  generator.ex  io_helpers.ex  remote_helpers.ex  setup-localstack.sh  wine.parquet
