[package]
name = "explorer"
# We don't use versioning in the in this crate.
# Please check the `mix.exs` file at the root of this project for the current version.
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "explorer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4"
rand = { version = "0.8.5", features = ["alloc"] }
rand_pcg = "0.3.1"
rustler = "0.27.0"
thiserror = "1"
smartstring = "1"

# MiMalloc won´t compile on Windows with the GCC compiler.
# On Linux with Musl it won´t load correctly.
[target.'cfg(not(any(all(windows, target_env = "gnu"), all(target_os = "linux", target_env = "musl"))))'.dependencies]
mimalloc = { version = "*", default-features = false }

[dependencies.polars]
version = "0.28"
default-features = false
features = [
  "checked_arithmetic",
  "concat_str",
  "cross_join",
  "cum_agg",
  "csv-file",
  "decompress",
  "describe",
  "dtype-date",
  "dtype-time",
  "dtype-datetime",
  "dtype-categorical",
  "ipc",
  "ipc_streaming",
  # JSON won't compile on RISCV and ARM 32 bits targets, so we disable in the "release" workflow.
  "json",
  "lazy",
  "lazy_regex",
  "log",
  "parquet",
  "performant",
  "pivot",
  "random",
  "rolling_window",
  "rows",
  "simd",
  "sort_multiple",
  "temporal",
  "to_dummies",
  "trigonometry",
  "is_in",
  "streaming",
  "strings",
  "round_series",
  "ewma"
]

[dependencies.polars-ops]
version = "0.28"

[patch.crates-io]
arrow2 = { git = "https://github.com/Qqwy/rust-arrow2.git", branch = "pr_combi" }
