[package]
name = "explorer"
# We don't use versioning in the in this crate.
# Please check the `mix.exs` file at the root of this project for the current version.
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "explorer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4"
rand = { version = "0.8", features = ["alloc"] }
rand_pcg = "0.3"
rustler = { version = "0.31", default-features = false, features = ["derive"] }
thiserror = "1"
smartstring = "1"
either = "1"

# Deps necessary for cloud features.
tokio = { version = "1.35", default-features = false, features = [
  "rt",
], optional = true }
tokio-util = { version = "0.7", default-features = false, features = [
  "io",
  "io-util",
], optional = true }
object_store = { version = "0.8", default-features = false, optional = true }

# MiMalloc won´t compile on Windows with the GCC compiler.
# On Linux with Musl it won´t load correctly.
[target.'cfg(not(any(all(windows, target_env = "gnu"), all(target_os = "linux", target_env = "musl"))))'.dependencies]
mimalloc = { version = "*", default-features = false }

[patch.crates-io]
jsonpath_lib = { version = "0.3", git = "https://github.com/ritchie46/jsonpath", branch = "improve_compiled" }

[dependencies.polars]
version = "0.37"
default-features = false
features = [
  "abs",
  "checked_arithmetic",
  "concat_str",
  "cross_join",
  "cum_agg",
  "cutqcut",
  "csv",
  "cov",
  "decompress-fast",
  "describe",
  "dtype-full",
  "group_by_list",
  "ipc",
  "ipc_streaming",
  "lazy",
  "regex",
  "log",
  "mode",
  "parquet",
  "performant",
  "pivot",
  "random",
  "rolling_window",
  "rows",
  "simd",
  "temporal",
  "to_dummies",
  "trigonometry",
  "is_in",
  "streaming",
  "strings",
  "round_series",
  "ewma",
  "product",
  "peaks",
  "moment",
  "range",
  "rank",
  "propagate_nans",
  "extract_jsonpath"
]

[dependencies.polars-ops]
version = "0.37"
features = ["abs", "ewma", "cum_agg", "cov"]

[features]
default = ["ndjson", "cloud", "nif_version_2_15"]

cloud = ["object_store", "tokio", "tokio-util", "aws", "polars/cloud", "polars/cloud_write"]
ndjson = ["polars/json"]
aws = ["object_store/aws", "polars/async", "polars/aws"]

# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
