[package]
name = "explorer"
# We don't use versioning in the in this crate.
# Please check the `mix.exs` file at the root of this project for the current version.
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "explorer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.10"
rand = { version = "0.8", features = ["alloc"] }
rand_pcg = "0.3"
rustler = { version = "0.35.1" }
thiserror = "2"
either = "1"

# Deps necessary for cloud features.
tokio = { version = "1.40", default-features = false, features = [
  "rt",
], optional = true }
object_store = { version = "0.11", default-features = false, optional = true }

# MiMalloc won´t compile on Windows with the GCC compiler.
# On Linux with Musl it won´t load correctly.
[target.'cfg(not(any(all(windows, target_env = "gnu"), all(target_os = "linux", target_env = "musl"))))'.dependencies]
mimalloc = { version = "*", default-features = false }

[dependencies.polars]
version = "0.45"
default-features = false
features = [
  "abs",
  "checked_arithmetic",
  "concat_str",
  "cov",
  "cross_join",
  "csv",
  "cum_agg",
  "cutqcut",
  "decompress-fast",
  "describe",
  "dtype-full",
  "ewma",
  "extract_groups",
  "extract_jsonpath",
  "ipc_streaming",
  "ipc",
  "is_in",
  "lazy",
  "log",
  "mode",
  "moment",
  "parquet",
  "peaks",
  "performant",
  "pivot",
  "product",
  "propagate_nans",
  "random",
  "range",
  "rank",
  "regex",
  "rolling_window",
  "round_series",
  "rows",
  "simd",
  "sql",
  "streaming",
  "strings",
  "temporal",
  "timezones",
  "to_dummies",
  "trigonometry",
]

[dependencies.polars-ops]
version = "0.45"
features = ["abs", "ewma", "cum_agg", "cov"]

[features]
default = ["ndjson", "cloud", "nif_version_2_15"]

cloud = [
  "object_store",
  "tokio",
  "aws",
  "polars/cloud",
]
ndjson = ["polars/json"]
aws = ["object_store/aws", "polars/async", "polars/aws"]

# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
